--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>DarkPlan Pro Planner</title>
     
+    <link rel="icon" type="image/png" href="https://img.icons8.com/pulsar-line/48/ffffff/calendar.png">
+    <link rel="apple-touch-icon" href="https://img.icons8.com/pulsar-line/180/ffffff/calendar.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#121212">
+
     <style>
         :root {
             --bg-dark: #121212;
@@ -14,7 +20,6 @@
             --text-main: #ffffff;
             --text-dim: #888888;
             --accent: #333333;
-            /* Extra large radius to follow the phone's physical corner */
             --iphone-radius: 50px; 
         }
 
@@ -37,6 +42,8 @@
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
             padding: 15px;
+            /* Added padding for notch/status bar safety */
+            padding-top: max(15px, env(safe-area-inset-top));
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -57,6 +64,7 @@
             color: var(--text-dim);
             font-size: 14px;
             font-weight: 600;
+            white-space: nowrap;
         }
 
         .nav-tab.active { background: var(--accent); color: white; }
@@ -65,7 +73,7 @@
             flex: 1;
             overflow-y: auto;
             padding: 20px;
-            padding-bottom: 220px; 
+            padding-bottom: 240px; 
         }
 
         .entry-card {
@@ -79,10 +87,9 @@
             align-items: center;
         }
 
-        /* THE ZERO-OFFSET FOOTER */
+        /* YOUR CUSTOM BOTTOM POSITION */
         #footer {
             position: fixed;
-            /* Pushes the curve into the very bottom edge */
             bottom: 10px; 
             left: 8px;
             right: 8px;
@@ -91,8 +98,8 @@
             -webkit-backdrop-filter: blur(40px);
             border: 1px solid var(--border);
             border-radius: var(--iphone-radius);
-            /* Static padding to keep the UI usable at the very bottom */
-            padding: 20px 20px 30px 20px;
+            /* Increased bottom padding slightly for tapping safety */
+            padding: 20px 20px 35px 20px;
             box-shadow: 0 -10px 40px rgba(0,0,0,0.8);
             display: flex;
             flex-direction: column;
@@ -126,7 +133,6 @@
         }
 
         .save-btn:active { transform: scale(0.96); opacity: 0.8; }
-
     </style>
 </head>
 <body>
@@ -186,6 +192,8 @@
         if(!name || !date) return;
         entries.push({ id: Date.now().toString(), name, date, type: activePlanner });
         localStorage.setItem('myEntries', JSON.stringify(entries));
+        document.getElementById('itemName').value = '';
+        document.getElementById('itemDate').value = '';
         renderApp();
     }
 
