--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>DarkPlan Pro Planner</title>
+    <title>DarkPlan Pro</title>
     
-    <link rel="icon" type="image/png" href="https://img.icons8.com/pulsar-line/48/ffffff/calendar.png">
     <link rel="apple-touch-icon" href="https://img.icons8.com/pulsar-line/180/ffffff/calendar.png">
+    <link rel="icon" type="image/png" href="https://img.icons8.com/pulsar-line/48/ffffff/calendar.png">
+    
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#121212">
@@ -20,7 +21,10 @@
             --text-main: #ffffff;
             --text-dim: #888888;
             --accent: #333333;
+            /* Perfectly matched hardware curve */
             --iphone-radius: 50px; 
+            /* Pill shape radius */
+            --pill: 100px; 
         }
 
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
@@ -42,8 +46,7 @@
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
             padding: 15px;
-            /* Added padding for notch/status bar safety */
-            padding-top: max(15px, env(safe-area-inset-top));
+            padding-top: 50px; 
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -51,59 +54,62 @@
 
         #planner-tabs {
             display: flex;
-            gap: 8px;
+            gap: 10px;
             overflow-x: auto;
             scrollbar-width: none;
         }
-        #planner-tabs::-webkit-scrollbar { display: none; }
 
         .nav-tab {
-            padding: 8px 16px;
+            padding: 10px 20px;
             background: transparent;
-            border-radius: 20px;
+            border-radius: var(--pill);
             color: var(--text-dim);
             font-size: 14px;
             font-weight: 600;
-            white-space: nowrap;
+            border: 1px solid transparent;
         }
 
-        .nav-tab.active { background: var(--accent); color: white; }
+        .nav-tab.active { 
+            background: var(--accent); 
+            color: white;
+            border: 1px solid var(--border);
+        }
 
         #content {
             flex: 1;
             overflow-y: auto;
             padding: 20px;
-            padding-bottom: 240px; 
+            padding-bottom: 200px; 
         }
 
         .entry-card {
             background: var(--bg-card);
             border: 1px solid var(--border);
-            border-radius: 12px;
-            padding: 16px;
+            border-radius: 25px; /* More rounded cards */
+            padding: 18px;
             margin-bottom: 12px;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
 
-        /* YOUR CUSTOM BOTTOM POSITION */
+        /* THE FLUSH ISLAND */
         #footer {
             position: fixed;
-            bottom: 10px; 
+            bottom: -5px; 
             left: 8px;
             right: 8px;
-            background: rgba(30, 30, 30, 0.98);
+            background: rgba(28, 28, 28, 0.98);
             backdrop-filter: blur(40px);
             -webkit-backdrop-filter: blur(40px);
             border: 1px solid var(--border);
             border-radius: var(--iphone-radius);
-            /* Increased bottom padding slightly for tapping safety */
-            padding: 20px 20px 35px 20px;
+            /* REDUCED PADDING: Shaved the bottom gap way down */
+            padding: 20px 20px 22px 20px; 
             box-shadow: 0 -10px 40px rgba(0,0,0,0.8);
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 10px;
             z-index: 1000;
         }
 
@@ -113,26 +119,30 @@
             background: #000;
             border: 1px solid var(--border);
             color: white;
-            padding: 14px;
-            border-radius: 20px;
+            padding: 14px 20px;
+            border-radius: var(--pill); /* Perfectly round sides */
             font-size: 16px;
             flex: 1;
             min-width: 0;
+            outline: none;
         }
 
         .save-btn {
             background: #ffffff;
             color: #000000;
             border: none;
-            padding: 18px;
-            border-radius: 25px;
+            padding: 16px;
+            border-radius: var(--pill); /* Perfectly round sides */
             font-weight: 900;
-            font-size: 14px;
+            font-size: 13px;
             text-transform: uppercase;
             letter-spacing: 1.5px;
         }
 
-        .save-btn:active { transform: scale(0.96); opacity: 0.8; }
+        .save-btn:active { transform: scale(0.97); opacity: 0.9; }
+
+        #add-btn { color: var(--text-dim); font-size: 28px; font-weight: 300; }
+
     </style>
 </head>
 <body>
@@ -140,17 +150,17 @@
 <div id="app">
     <div id="nav-bar">
         <div id="planner-tabs"></div>
-        <div style="color: var(--text-dim); font-size: 24px; padding-left: 10px; cursor: pointer;" onclick="createNewPlanner()">+</div>
+        <div id="add-btn" onclick="createNewPlanner()">+</div>
     </div>
 
     <div id="content">
-        <span style="font-size: 11px; text-transform: uppercase; color: var(--text-dim); display: block; margin-bottom: 15px;" id="list-name-label">List</span>
+        <span style="font-size: 10px; text-transform: uppercase; letter-spacing: 1px; color: var(--text-dim); display: block; margin-bottom: 15px; margin-left: 5px;" id="list-name-label">List</span>
         <div id="task-list"></div>
     </div>
 
     <div id="footer">
         <div class="input-row">
-            <input type="text" id="itemName" placeholder="New task...">
+            <input type="text" id="itemName" placeholder="Task name...">
             <input type="date" id="itemDate">
         </div>
         <button class="save-btn" onclick="saveEntry()">Add to List</button>
@@ -158,7 +168,7 @@
 </div>
 
 <script>
-    let planners = JSON.parse(localStorage.getItem('myPlanners')) || ['Grades', 'Game Releases'];
+    let planners = JSON.parse(localStorage.getItem('myPlanners')) || ['Grades', 'Assignments'];
     let entries = JSON.parse(localStorage.getItem('myEntries')) || [];
     let activePlanner = planners[0];
 
@@ -181,7 +191,7 @@
         activeEntries.forEach((entry) => {
             const card = document.createElement('div');
             card.className = 'entry-card';
-            card.innerHTML = `<div><b>${entry.name}</b><br><small>${entry.date}</small></div>`;
+            card.innerHTML = `<div><b style="font-size: 16px;">${entry.name}</b><br><span style="color:var(--text-dim); font-size: 12px;">${entry.date}</span></div>`;
             list.appendChild(card);
         });
     }
