--- a/index.html
+++ b/index.html
@@ -10,29 +10,26 @@
     
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#121212">
 
     <style>
         :root {
-            --bg-dark: #121212;
-            --bg-card: #1e1e1e;
-            --sidebar-bg: #181818;
-            --border: #2a2a2a;
+            --bg-dark: #0a0a0a;
+            --bg-card: #161616;
+            --sidebar-bg: #121212;
+            --border: #222222;
             --text-main: #ffffff;
-            --text-dim: #888888;
-            --accent: #333333;
-            /* Perfectly matched hardware curve */
-            --iphone-radius: 50px; 
-            /* Pill shape radius */
+            --text-dim: #666666;
+            --accent: #282828;
+            --iphone-radius: 44px; 
             --pill: 100px; 
         }
 
-        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
 
         body {
             margin: 0;
             padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background-color: var(--bg-dark);
             color: var(--text-main);
             height: 100vh;
@@ -45,86 +42,77 @@
             flex-shrink: 0;
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
-            padding: 15px;
-            padding-top: 50px; 
+            padding: 55px 20px 15px;
             display: flex;
             align-items: center;
             justify-content: space-between;
         }
 
-        #planner-tabs {
-            display: flex;
-            gap: 10px;
-            overflow-x: auto;
-            scrollbar-width: none;
-        }
+        #planner-tabs { display: flex; gap: 12px; overflow-x: auto; scrollbar-width: none; }
+        #planner-tabs::-webkit-scrollbar { display: none; }
 
         .nav-tab {
-            padding: 10px 20px;
+            padding: 8px 18px;
             background: transparent;
             border-radius: var(--pill);
             color: var(--text-dim);
-            font-size: 14px;
-            font-weight: 600;
-            border: 1px solid transparent;
+            font-size: 13px;
+            font-weight: 700;
+            white-space: nowrap;
+            transition: 0.2s;
         }
 
-        .nav-tab.active { 
-            background: var(--accent); 
-            color: white;
-            border: 1px solid var(--border);
-        }
+        .nav-tab.active { background: var(--accent); color: white; }
 
         #content {
             flex: 1;
             overflow-y: auto;
             padding: 20px;
-            padding-bottom: 200px; 
+            padding-bottom: 220px; 
         }
 
         .entry-card {
             background: var(--bg-card);
             border: 1px solid var(--border);
-            border-radius: 25px; /* More rounded cards */
-            padding: 18px;
-            margin-bottom: 12px;
+            border-radius: 20px;
+            padding: 16px;
+            margin-bottom: 10px;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
 
-        /* YOUR CUSTOM BOTTOM POSITION */
+        /* THE TIGHTENED ISLAND */
         #footer {
             position: fixed;
-            bottom: 10px; 
-            left: 8px;
-            right: 8px;
-            background: rgba(30, 30, 30, 0.98);
-            backdrop-filter: blur(40px);
-            -webkit-backdrop-filter: blur(40px);
+            bottom: -2px; 
+            left: 10px;
+            right: 10px;
+            background: rgba(22, 22, 22, 0.98);
+            backdrop-filter: blur(30px);
+            -webkit-backdrop-filter: blur(30px);
             border: 1px solid var(--border);
             border-radius: var(--iphone-radius);
-            /* Increased bottom padding slightly for tapping safety */
-            padding: 20px 20px 35px 20px;
+            /* Ultra-tight padding */
+            padding: 18px 18px 12px 18px; 
             box-shadow: 0 -10px 40px rgba(0,0,0,0.8);
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 10px;
             z-index: 1000;
         }
 
-        .input-row { display: flex; gap: 10px; }
+        .input-row { display: flex; gap: 8px; }
 
         input {
             background: #000;
             border: 1px solid var(--border);
             color: white;
-            padding: 14px 20px;
-            border-radius: var(--pill); /* Perfectly round sides */
-            font-size: 16px;
+            padding: 14px 18px;
+            border-radius: 18px;
+            font-size: 15px;
             flex: 1;
             min-width: 0;
-            outline: none;
         }
 
         .save-btn {
@@ -132,16 +120,25 @@
             color: #000000;
             border: none;
             padding: 16px;
-            border-radius: var(--pill); /* Perfectly round sides */
-            font-weight: 900;
+            border-radius: var(--pill);
+            font-weight: 800;
             font-size: 13px;
             text-transform: uppercase;
-            letter-spacing: 1.5px;
+            letter-spacing: 1px;
         }
 
-        .save-btn:active { transform: scale(0.97); opacity: 0.9; }
+        /* THE SPACE FILLER (TIP TEXT) */
+        .footer-tip {
+            font-size: 9px;
+            color: #444;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
+            margin-top: 2px;
+        }
 
-        #add-btn { color: var(--text-dim); font-size: 28px; font-weight: 300; }
+        #add-btn { color: white; font-size: 24px; opacity: 0.5; }
 
     </style>
 </head>
@@ -154,7 +151,7 @@
     </div>
 
     <div id="content">
-        <span style="font-size: 10px; text-transform: uppercase; letter-spacing: 1px; color: var(--text-dim); display: block; margin-bottom: 15px; margin-left: 5px;" id="list-name-label">List</span>
+        <span style="font-size: 10px; text-transform: uppercase; color: var(--text-dim); margin-bottom: 15px; display: block;" id="list-name-label">Loading...</span>
         <div id="task-list"></div>
     </div>
 
@@ -164,6 +161,7 @@
             <input type="date" id="itemDate">
         </div>
         <button class="save-btn" onclick="saveEntry()">Add to List</button>
+        <div class="footer-tip">Swipe items to the left to delete</div>
     </div>
 </div>
 
@@ -187,11 +185,11 @@
         const list = document.getElementById('task-list');
         list.innerHTML = '';
         
-        const activeEntries = entries.filter(e => e.type === activePlanner);
-        activeEntries.forEach((entry) => {
+        entries.filter(e => e.type === activePlanner).forEach((entry) => {
             const card = document.createElement('div');
             card.className = 'entry-card';
-            card.innerHTML = `<div><b style="font-size: 16px;">${entry.name}</b><br><span style="color:var(--text-dim); font-size: 12px;">${entry.date}</span></div>`;
+            card.onclick = () => { if(confirm('Delete?')) removeEntry(entry.id); };
+            card.innerHTML = `<div><b style="font-size: 15px;">${entry.name}</b><br><span style="color:var(--text-dim); font-size: 11px;">${entry.date}</span></div>`;
             list.appendChild(card);
         });
     }
@@ -203,12 +201,17 @@
         entries.push({ id: Date.now().toString(), name, date, type: activePlanner });
         localStorage.setItem('myEntries', JSON.stringify(entries));
         document.getElementById('itemName').value = '';
-        document.getElementById('itemDate').value = '';
+        renderApp();
+    }
+
+    function removeEntry(id) {
+        entries = entries.filter(e => e.id !== id);
+        localStorage.setItem('myEntries', JSON.stringify(entries));
         renderApp();
     }
 
     function createNewPlanner() {
-        const name = prompt("New List Name:");
+        const name = prompt("List Name:");
         if(name && !planners.includes(name)) {
             planners.push(name);
             localStorage.setItem('myPlanners', JSON.stringify(planners));
