--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
     
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#121212">
 
     <style>
         :root {
-            --bg-dark: #0a0a0a;
-            --bg-card: #161616;
-            --sidebar-bg: #121212;
-            --border: #222222;
+            --bg-dark: #121212;
+            --bg-card: #1e1e1e;
+            --sidebar-bg: #181818;
+            --border: #2a2a2a;
             --text-main: #ffffff;
-            --text-dim: #666666;
-            --accent: #282828;
-            --iphone-radius: 44px; 
+            --text-dim: #888888;
+            --accent: #333333;
+            --iphone-radius: 50px; 
             --pill: 100px; 
         }
 
-        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
 
         body {
             margin: 0;
             padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
             background-color: var(--bg-dark);
             color: var(--text-main);
             height: 100vh;
@@ -42,27 +43,34 @@
             flex-shrink: 0;
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
-            padding: 55px 20px 15px;
+            padding: 15px;
+            padding-top: 55px; 
             display: flex;
             align-items: center;
             justify-content: space-between;
         }
 
-        #planner-tabs { display: flex; gap: 12px; overflow-x: auto; scrollbar-width: none; }
-        #planner-tabs::-webkit-scrollbar { display: none; }
+        #planner-tabs {
+            display: flex;
+            gap: 10px;
+            overflow-x: auto;
+            scrollbar-width: none;
+        }
 
         .nav-tab {
-            padding: 8px 18px;
+            padding: 10px 20px;
             background: transparent;
             border-radius: var(--pill);
             color: var(--text-dim);
-            font-size: 13px;
-            font-weight: 700;
-            white-space: nowrap;
-            transition: 0.2s;
+            font-size: 14px;
+            font-weight: 600;
         }
 
-        .nav-tab.active { background: var(--accent); color: white; }
+        .nav-tab.active { 
+            background: var(--accent); 
+            color: white;
+            border: 1px solid var(--border);
+        }
 
         #content {
             flex: 1;
@@ -74,45 +82,47 @@
         .entry-card {
             background: var(--bg-card);
             border: 1px solid var(--border);
-            border-radius: 20px;
-            padding: 16px;
-            margin-bottom: 10px;
+            border-radius: 25px;
+            padding: 18px;
+            margin-bottom: 12px;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
 
-        /* THE TIGHTENED ISLAND */
+        /* THE UPDATED FOOTER */
         #footer {
             position: fixed;
-            bottom: -2px; 
-            left: 10px;
-            right: 10px;
-            background: rgba(22, 22, 22, 0.98);
-            backdrop-filter: blur(30px);
-            -webkit-backdrop-filter: blur(30px);
+            bottom: 10px; 
+            left: 8px;
+            right: 8px;
+            background: rgba(30, 30, 30, 0.98);
+            backdrop-filter: blur(40px);
+            -webkit-backdrop-filter: blur(40px);
             border: 1px solid var(--border);
             border-radius: var(--iphone-radius);
-            /* Ultra-tight padding */
-            padding: 18px 18px 12px 18px; 
+            /* Reduced bottom padding from 35px to 14px */
+            padding: 20px 20px 14px 20px;
             box-shadow: 0 -10px 40px rgba(0,0,0,0.8);
             display: flex;
             flex-direction: column;
             gap: 10px;
             z-index: 1000;
+            text-align: center;
         }
 
-        .input-row { display: flex; gap: 8px; }
+        .input-row { display: flex; gap: 10px; }
 
         input {
             background: #000;
             border: 1px solid var(--border);
             color: white;
-            padding: 14px 18px;
-            border-radius: 18px;
-            font-size: 15px;
+            padding: 14px 20px;
+            border-radius: var(--pill);
+            font-size: 16px;
             flex: 1;
             min-width: 0;
+            outline: none;
         }
 
         .save-btn {
@@ -121,24 +131,23 @@
             border: none;
             padding: 16px;
             border-radius: var(--pill);
-            font-weight: 800;
+            font-weight: 900;
             font-size: 13px;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 1.5px;
         }
 
-        /* THE SPACE FILLER (TIP TEXT) */
-        .footer-tip {
+        /* THE TINY TEXT TIP */
+        .bottom-tip {
             font-size: 9px;
-            color: #444;
-            text-align: center;
+            color: #444; /* Very dim so it doesn't distract */
             text-transform: uppercase;
             letter-spacing: 1px;
-            font-weight: 600;
             margin-top: 2px;
+            font-weight: 700;
         }
 
-        #add-btn { color: white; font-size: 24px; opacity: 0.5; }
+        #add-btn { color: var(--text-dim); font-size: 28px; font-weight: 300; }
 
     </style>
 </head>
@@ -151,7 +160,7 @@
     </div>
 
     <div id="content">
-        <span style="font-size: 10px; text-transform: uppercase; color: var(--text-dim); margin-bottom: 15px; display: block;" id="list-name-label">Loading...</span>
+        <span style="font-size: 10px; text-transform: uppercase; letter-spacing: 1px; color: var(--text-dim); display: block; margin-bottom: 15px; margin-left: 5px;" id="list-name-label">List</span>
         <div id="task-list"></div>
     </div>
 
@@ -161,7 +170,7 @@
             <input type="date" id="itemDate">
         </div>
         <button class="save-btn" onclick="saveEntry()">Add to List</button>
-        <div class="footer-tip">Swipe items to the left to delete</div>
+        <div class="bottom-tip">Tap above to save entry</div>
     </div>
 </div>
 
@@ -185,11 +194,11 @@
         const list = document.getElementById('task-list');
         list.innerHTML = '';
         
-        entries.filter(e => e.type === activePlanner).forEach((entry) => {
+        const activeEntries = entries.filter(e => e.type === activePlanner);
+        activeEntries.forEach((entry) => {
             const card = document.createElement('div');
             card.className = 'entry-card';
-            card.onclick = () => { if(confirm('Delete?')) removeEntry(entry.id); };
-            card.innerHTML = `<div><b style="font-size: 15px;">${entry.name}</b><br><span style="color:var(--text-dim); font-size: 11px;">${entry.date}</span></div>`;
+            card.innerHTML = `<div><b style="font-size: 16px;">${entry.name}</b><br><span style="color:var(--text-dim); font-size: 12px;">${entry.date}</span></div>`;
             list.appendChild(card);
         });
     }
@@ -201,17 +210,12 @@
         entries.push({ id: Date.now().toString(), name, date, type: activePlanner });
         localStorage.setItem('myEntries', JSON.stringify(entries));
         document.getElementById('itemName').value = '';
-        renderApp();
-    }
-
-    function removeEntry(id) {
-        entries = entries.filter(e => e.id !== id);
-        localStorage.setItem('myEntries', JSON.stringify(entries));
+        document.getElementById('itemDate').value = '';
         renderApp();
     }
 
     function createNewPlanner() {
-        const name = prompt("List Name:");
+        const name = prompt("New List Name:");
         if(name && !planners.includes(name)) {
             planners.push(name);
             localStorage.setItem('myPlanners', JSON.stringify(planners));
