--- a/index.html
+++ b/index.html
@@ -67,22 +67,35 @@
         .input-row { display: flex; gap: 10px; width: 100%; }
         
         input { 
-            background: #000; border: 1px solid var(--border); color: white; 
-            padding: 12px 15px; border-radius: var(--pill); flex: 1; font-size: 15px;
-            min-width: 0; height: 48px; -webkit-appearance: none;
-            display: flex; align-items: center;
+            background: #000 !important; 
+            border: 1px solid var(--border); 
+            color: #ffffff !important; /* Forces text to be white */
+            padding: 12px 15px; 
+            border-radius: var(--pill); 
+            flex: 1; 
+            font-size: 16px;
+            min-width: 0; 
+            height: 48px;
+            -webkit-appearance: none;
+            display: flex;
+            align-items: center;
         }
 
         input[type="date"] {
-            color-scheme: dark;
-            display: block;
-            line-height: 1.2;
+            color-scheme: dark !important;
+            display: flex !important;
+            align-items: center !important;
+            color: white !important;
+            background-color: black !important;
         }
 
+        /* The "Nuclear Option" for iOS Date text visibility */
         input[type="date"]::-webkit-date-and-time-value {
+            color: white !important;
+            background-color: transparent !important;
             text-align: left;
-            padding-left: 5px;
             min-height: 20px;
+            margin-top: 2px;
         }
 
         .save-btn { 
@@ -113,7 +126,7 @@
             <input type="date" id="itemDate">
         </div>
         <button class="save-btn" onclick="saveTask()">Add to List</button>
-        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -5px;">USE THIS PLANNER FOR ANYTHING INCLUDING GRADES GAME RELEASES AND MORE</div>
+        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -5px;">USE THIS PLANNER FOR ANYTHING INCLUDING ASSIGNMENTS, GAME RELEASES AND MORE!</div>
     </div>
 </div>
 
